Feat(UI)/Implement UI id lookup system (#597)
* Centralize project open/close event handling

Project lifecycle signaling is now handled in `ProjectManager#setCurrentProject` instead of scattered call sites, and `IDESetup` no longer publishes duplicate open events. The `Project` SPI now includes a `close()` method, implemented by `RailroadProject` to safely clear the active project only when paths match. Opening a project now closes a different currently-open project first and registers a shutdown hook to close it on app shutdown, keeping project state and `ProjectEvent` OPENED/CLOSED notifications consistent.

* Persist open files per project state

Add project-level IDE session persistence by introducing `ProjectConfig` (`project.json`) and wiring `RailroadProject` to save and restore open documents plus the active document on close/open. Implement `DefaultIDEStateService` mutators that were previously no-ops, including open/close/active document updates and event publishing from the state service itself. Also add path-based `FileSystemDocument` constructors and update project explorer/delete/rename flows to use them consistently.

* Implement UI id lookup system (plus minor cleanup)